// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should render 1`] = `
<div>
  <span
    class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
  >
    <span />
  </span>
</div>
`;

exports[`Badge should render with icon 1`] = `
<div>
  <span
    class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-AxjAm HWmvM"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'bottom' 1`] = `
<div>
  <span
    class="sc-AxirZ lcxWOH flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-AxjAm HWmvM"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'bottom-left' 1`] = `
<div>
  <span
    class="sc-AxirZ zvcQQ flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-AxjAm HWmvM"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'bottom-right' 1`] = `
<div>
  <span
    class="sc-AxirZ deTCNy flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-AxjAm HWmvM"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'left' 1`] = `
<div>
  <span
    class="sc-AxirZ IFxJn flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-AxjAm HWmvM"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'right' 1`] = `
<div>
  <span
    class="sc-AxirZ cGZUNJ flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-AxjAm HWmvM"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'top' 1`] = `
<div>
  <span
    class="sc-AxirZ fsSQyi flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-AxjAm HWmvM"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'top-left' 1`] = `
<div>
  <span
    class="sc-AxirZ kGCdfh flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-AxjAm HWmvM"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'top-right' 1`] = `
<div>
  <span
    class="sc-AxirZ foLnun flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-AxjAm HWmvM"
      height="12"
      width="12"
    />
    <span />
  </span>
</div>
`;
